[package]
name = "dashpipe"
version = "0.1.0"
authors = ["modderme123 <modderme123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
fork = "0.1"
futures-util = {version = "0.3", features = ["io"]}
tokio = {version = "1.4", features = ["full"]}
tokio-tungstenite = "0.14"
tokio-util = {version = "0.6", features = ["full"]}
