[package]
authors = ["modderme123 <modderme123@gmail.com>"]
edition = "2018"
name = "dashpipe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.8.3"
fork = "0.1"
futures-util = {version = "0.3", features = ["io"]}
log = "0.4.14"
quick-error = "2.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.61"
serde_with = {version = "1.8.0", features = ["json", "macros"]}
tokio = {version = "1.4", features = ["full"]}
tokio-tungstenite = "0.14"
tokio-util = {version = "0.6", features = ["full"]}
